2016-02-06  vaiorabbit  <http://twitter.com/vaiorabbit>

	* README.md: Added projects using this gem.

2016-01-09  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-01-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* LICENSE.txt: Updated copyright year.

2015-12-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/glfw.rb, lib/glfw30.rb, lib/glut.rb: 'create_callback' now creates
	callback functions as an instance of Fiddle::Closure::BlockCaller. Old
	methods are still available (renamed to create_callback_function').

2015-11-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/opengl_linux.rb (glXGetCurrentDisplay): Fixed wrong signature.

2015-11-07  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/opengl_macosx.rb, lib/opengl_linux.rb: Added.

2015-11-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/DebugOutput/debug_output.rb: Fidex '$debug_log_callback' to '$debug_log_callback.to_i' (now runnable both C edition and pure-Ruby edition).

2015-10-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.
	* sample/NamaspaceMigration: Fixed warning.

2015-10-19  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/opengl_ext.rb: Now tries to find C Edition.
	* generator: Refactoring

2015-10-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator: Refactoring

2015-10-17  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.
	* sample/GLFW/heightmap.rb : Added.

2015-10-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/GLFW/boing.rb, sample/util/rmath3d_plain.rb : Added.

2015-10-15  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/glfw31_build_dylib.sh: Now uses GLFW 3.1.2.

2015-10-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/opengl.rb: Now tries to find C Edition.

2015-10-13  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-10-12  vaiorabbit  <http://twitter.com/vaiorabbit>
