@@ -1,3 +1,8 @@
+2016-03-22  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* glfw.rb: Added GLFW 3.2 features.
+	* glfw31.rb: Previous version of 'glfw.rb' is available as 'glfw31.rb'.
+
 2016-02-06  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* README.md: Added projects using this gem.
